--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rede Credenciada - Select Saúde Premium</title>
+    <title>Rede Credenciada - Select Saúde Premium/PE</title>
 
     <!-- Define a cor da barra do navegador e o tema visual principal do PWA -->
     <meta name="theme-color" content="#794ef4">
@@ -642,7 +642,7 @@
                     </div>
                     
                     <h1 style="margin-bottom: 5px; margin-top: 5px;">
-                        Rede Credenciada - Select Saúde Premium
+                        Rede Credenciada - Select Saúde Premium/PE
                         <br> 
                         <span id="lastUpdatedDate" style="color: #e74c3c; font-size: 0.6em; font-weight: normal;">
                             Atualizada em 30/09/2025
